# food-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
nginx/: default.conf
scripts/: entrypoint.sh
src/: manage.py
src/app/: __init__.py  admin.py  apps.py  models.py
src/app/internal/: __init__.py
src/app/internal/data/models/: __init__.py  author_application.py  author_follow.py  author_subscription.py  notification.py  password_change_code.py  payment.py  recipe.py  recipe_favorite.py  recipe_ingredient.py  recipe_like.py  recipe_purchase.py  recipe_report.py  recipe_review.py
src/app/internal/data/repositories/: __init__.py  author_application.py  password_change_code.py  payment.py  recipe.py  user.py  yookassa.py
src/app/internal/domain/entities/: __init__.py  author_application.py  author_follow.py  author_subscription.py  notification.py  password_change_code.py  payment.py  recipe.py  recipe_analytics.py  recipe_purchase.py  recipe_report.py  recipe_review.py  token.py  user.py
src/app/internal/domain/interfaces/: __init__.py  author_application.py  password_change_code.py  payment.py  recipe.py  token.py  user.py  yookassa.py
src/app/migrations/: 0001_initial.py  0002_password_change_code.py  0003_recipe_ingredient.py  0004_recipe_author_and_favorites.py  0005_recipe_metrics_and_publication.py  0006_author_application.py  0007_monetization.py  0008_social_features.py  0009_moderation_workflow.py  __init__.py
src/config/: settings.py  urls.py
(+18 files in other folders)
