[tool.poetry]
name = "food-app-backend"
version = "0.1.0"
description = "Recipe web application backend"
authors = ["Onetrippin <kolimpiadnik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
django-ninja = "^1.4.1"
psycopg = { version = "^3.2.9", extras = ["binary"] }
uvicorn = { version = "^0.35.0", extras = ["standard"] }
python-dotenv = "^1.1.0"
PyJWT = "^2.10.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
